--- a/src/Antix.EASI.Web/client/examinations/examinations.css
+++ b/src/Antix.EASI.Web/client/examinations/examinations.css
@@ -1,8 +1,6 @@
-﻿.examinations-list .panel.examination-panel {
-  background-color: #f3f3f3;
-}
-.examinations-list .panel.examination-panel .panel-footer {
-  background-color: none;
+﻿.examinations-list {
+  margin-left: -20px;
+  margin-right: -20px;
 }
 .examination-row {
   margin-left: -15px;
@@ -63,29 +61,6 @@
   .examination-row .examination-regions {
     float: left;
     width: 58.33333333%;
-  }
-}
-.examination-row .examination-regions .tabs {
-  padding-bottom: 15px;
-  border-bottom: solid 1px #dddddd;
-}
-.examination-row .examination-regions .tabs .nav-tabs > li.active > a {
-  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f3f3f3 100%);
-  background-image: -o-linear-gradient(top, #ffffff 0%, #f3f3f3 100%);
-  background-image: linear-gradient(to bottom, #ffffff 0%, #f3f3f3 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff3f3f3', GradientType=0);
-  background-color: inherit;
-}
-@media (min-width: 768px) {
-  .examination-row .examination-regions .tabs .nav-tabs > li.active > a {
-    border-bottom-color: #f3f3f3;
-  }
-}
-@media (min-width: 768px) {
-  .examination-row .examination-regions .tabs .nav-tabs > li > a {
-    height: 50px;
-    font-size: .8em;
   }
 }
 .examination-row .examination-notes,
