--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -82,6 +82,7 @@ input {
 
         .panel-heading {
             border: none;
+            background-color: @page-content-color;
 
             > .btn-group .btn {
                 border: none;
