--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6309,7 +6309,7 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .modal .modal-dialog .modal-content {
-  background-color: #f3f3f3;
+  background-color: #eeeeee;
 }
 .dropdown-menu {
   border: none;
@@ -6328,11 +6328,11 @@ input {
   min-height: 500px;
 }
 .page-body #breadcrumb {
-  background-image: -webkit-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
-  background-image: -o-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
-  background-image: linear-gradient(to right, #f3f3f3 0%, #dadada 100%);
+  background-image: -webkit-linear-gradient(left, #eeeeee 0%, #d5d5d5 100%);
+  background-image: -o-linear-gradient(left, #eeeeee 0%, #d5d5d5 100%);
+  background-image: linear-gradient(to right, #eeeeee 0%, #d5d5d5 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff3f3f3', endColorstr='#ffdadada', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeeeeee', endColorstr='#ffd5d5d5', GradientType=1);
   top: 50px;
   min-height: 0;
   margin: 0;
@@ -6346,7 +6346,7 @@ input {
   text-transform: lowercase;
 }
 .page-body .page-content {
-  background-color: #f3f3f3;
+  background-color: #eeeeee;
   min-height: 300px;
   padding-top: 10px;
 }
@@ -6354,10 +6354,11 @@ input {
   margin: -20px -15px 0;
 }
 .page-body .panel {
-  background-color: #f3f3f3;
+  background-color: #eeeeee;
 }
 .page-body .panel .panel-heading {
   border: none;
+  background-color: #eeeeee;
 }
 .page-body .panel .panel-heading > .btn-group .btn {
   border: none;
