--- a/src/Antix.EASI.Web/client/examinations/eric/examinations-eric.less
+++ b/src/Antix.EASI.Web/client/examinations/eric/examinations-eric.less
@@ -11,7 +11,7 @@
         .legs,
         .arms {
             fill: #ccc;
-            stroke: #ccc;
+            stroke: transparent;
             stroke-width: 1px;
         }
 
