--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -57,6 +57,7 @@ input {
         margin: 0;
         border: none;
         z-index: 100;
+        box-shadow: 0 2px 5px rgba(0,0,0,.2);
 
         .breadcrumb {
             margin: 0;
