--- a/src/Antix.EASI.Web/Content/site/tabs.css
+++ b/src/Antix.EASI.Web/Content/site/tabs.css
@@ -5,21 +5,21 @@
 .tabs .nav-tabs > li > a:active,
 .tabs .nav-tabs > li > a:focus,
 .tabs .nav-tabs > li > a:hover {
-  background-image: -webkit-linear-gradient(top, #eeeeee 0%, #e6e6e6 100%);
-  background-image: -o-linear-gradient(top, #eeeeee 0%, #e6e6e6 100%);
-  background-image: linear-gradient(to bottom, #eeeeee 0%, #e6e6e6 100%);
+  background-image: -webkit-linear-gradient(top, #d4dee8 0%, #cad6e3 100%);
+  background-image: -o-linear-gradient(top, #d4dee8 0%, #cad6e3 100%);
+  background-image: linear-gradient(to bottom, #d4dee8 0%, #cad6e3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffeeeeee', endColorstr='#ffe6e6e6', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd4dee8', endColorstr='#ffcad6e3', GradientType=0);
 }
 .tabs .nav-tabs > li.active > a,
 .tabs .nav-tabs > li.active > a:active,
 .tabs .nav-tabs > li.active > a:focus,
 .tabs .nav-tabs > li.active > a:hover {
-  background-image: -webkit-linear-gradient(top, #fbfbfb 0%, #eeeeee 100%);
-  background-image: -o-linear-gradient(top, #fbfbfb 0%, #eeeeee 100%);
-  background-image: linear-gradient(to bottom, #fbfbfb 0%, #eeeeee 100%);
+  background-image: -webkit-linear-gradient(top, #e5ebf1 0%, #d4dee8 100%);
+  background-image: -o-linear-gradient(top, #e5ebf1 0%, #d4dee8 100%);
+  background-image: linear-gradient(to bottom, #e5ebf1 0%, #d4dee8 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fffbfbfb', endColorstr='#ffeeeeee', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe5ebf1', endColorstr='#ffd4dee8', GradientType=0);
   background-color: inherit;
   border: none;
 }
