--- a/src/Antix.EASI.Web/client/examinations/eric/examinations-eric.less
+++ b/src/Antix.EASI.Web/client/examinations/eric/examinations-eric.less
@@ -11,8 +11,8 @@
         .legs,
         .arms {
             fill: #ccc;
-            stroke: transparent;
-            stroke-width: 1px;
+            stroke: rgba(0,0,0,.2);
+            stroke-width: 2px;
         }
 
         .total-score {
