improved eric on iphone and button padding

--- a/src/Antix.EASI.Web/client/examinations/examinations.css
+++ b/src/Antix.EASI.Web/client/examinations/examinations.css
@@ -160,7 +160,7 @@
 }
 .examination-region-score .btn {
   font-size: .75em;
-  padding: 14px;
+  padding: 14px 0;
 }
 .examination-severity-score {
   padding-bottom: 5px;
