--- a/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
+++ b/src/Antix.EASI.Web/client/patients/edit/patients-edit.cshtml
@@ -12,7 +12,7 @@
 
     <form name="form">
         <div class="form-icon">
-            <span class="fa fa-user-md"></span>
+            <span class="fa fa-user"></span>
         </div>
         <hr />
         <div class="form-group">
