--- a/src/Antix.EASI.Web/client/patients/list/patients-list-item.cshtml
+++ b/src/Antix.EASI.Web/client/patients/list/patients-list-item.cshtml
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <h4 class="panel-title">
-                <span class="fa fa-user-md"></span>
+                <span class="fa fa-user"></span>
                 {{item | patientName}}
             </h4>
         </div>
