--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -1,25 +1,29 @@
 ﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div id="page-home" class="container">
+    <div class="container">
         <ol class="breadcrumb">
             <li><a href="#/">Home</a></li>
         </ol>
     </div>
 </div>
 
-<div id="page-home" class="page-content container">
+<div id="page-home" class="container">
+    
+    <div class="home">
+        <div class="calendar" antix-calendar></div>
 
-    <div class="list-group">
-        <a href="#/examinations/" class="list-group-item">
-            <span class="fa fa-clipboard"></span>
-            Examinations
-        </a>
-        <a href="#/examiners/" class="list-group-item">
-            <span class="fa fa-user-md"></span>
-            Examiners
-        </a>
-        <a href="#/patients/" class="list-group-item">
-            <span class="fa fa-user"></span>
-            Patients
-        </a>
+        <div class="calendar-entries list-group">
+            <a href="#/examinations/" class="list-group-item">
+                <span class="fa fa-clipboard"></span>
+                Examinations
+            </a>
+            <a href="#/examiners/" class="list-group-item">
+                <span class="fa fa-user-md"></span>
+                Examiners
+            </a>
+            <a href="#/patients/" class="list-group-item">
+                <span class="fa fa-user"></span>
+                Patients
+            </a>
+        </div>
     </div>
 </div>
