--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6293,6 +6293,9 @@ body {
   background-color: #3e3e3e;
   overflow-y: scroll;
 }
+strong {
+  font-weight: 600;
+}
 .footer {
   width: 100%;
   height: 50px;
@@ -6309,7 +6312,7 @@ body {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .modal .modal-dialog .modal-content {
-  background-color: #d4dee8;
+  background-color: #e4e9ed;
 }
 .dropdown-menu {
   border: none;
@@ -6328,11 +6331,11 @@ input {
   min-height: 500px;
 }
 .page-body #breadcrumb {
-  background-image: -webkit-linear-gradient(left, #d4dee8 0%, #b3c4d6 100%);
-  background-image: -o-linear-gradient(left, #d4dee8 0%, #b3c4d6 100%);
-  background-image: linear-gradient(to right, #d4dee8 0%, #b3c4d6 100%);
+  background-image: -webkit-linear-gradient(left, #e4e9ed 0%, #c5d0d9 100%);
+  background-image: -o-linear-gradient(left, #e4e9ed 0%, #c5d0d9 100%);
+  background-image: linear-gradient(to right, #e4e9ed 0%, #c5d0d9 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd4dee8', endColorstr='#ffb3c4d6', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe4e9ed', endColorstr='#ffc5d0d9', GradientType=1);
   top: 50px;
   min-height: 0;
   margin: 0;
@@ -6347,7 +6350,7 @@ input {
   text-transform: lowercase;
 }
 .page-body .page-content {
-  background-color: #d4dee8;
+  background-color: #e4e9ed;
   min-height: 300px;
   padding-top: 10px;
 }
@@ -6355,11 +6358,11 @@ input {
   margin: -20px -15px 0;
 }
 .page-body .panel {
-  background-color: #d4dee8;
+  background-color: #e4e9ed;
 }
 .page-body .panel .panel-heading {
   border: none;
-  background-color: #d4dee8;
+  background-color: #e4e9ed;
 }
 .page-body .panel .panel-heading > .btn-group .btn {
   border: none;
