--- a/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
+++ b/src/Antix.EASI.Web/client/examiners/index/examiners-index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div id="breadcrumb" class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div id="page-home" class="container">
+    <div class="container">
         <ol class="breadcrumb">
             <li><a href="#/">Home</a></li>
             <li><a href="#/examiners/">Examiners</a></li>
