--- a/src/Antix.EASI.Web/Content/site/tabs.css
+++ b/src/Antix.EASI.Web/Content/site/tabs.css
@@ -5,21 +5,21 @@
 .tabs .nav-tabs > li > a:active,
 .tabs .nav-tabs > li > a:focus,
 .tabs .nav-tabs > li > a:hover {
-  background-image: -webkit-linear-gradient(top, #e4e9ed 0%, #dbe2e7 100%);
-  background-image: -o-linear-gradient(top, #e4e9ed 0%, #dbe2e7 100%);
-  background-image: linear-gradient(to bottom, #e4e9ed 0%, #dbe2e7 100%);
+  background-image: -webkit-linear-gradient(top, #f3f3f3 0%, #ebebeb 100%);
+  background-image: -o-linear-gradient(top, #f3f3f3 0%, #ebebeb 100%);
+  background-image: linear-gradient(to bottom, #f3f3f3 0%, #ebebeb 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe4e9ed', endColorstr='#ffdbe2e7', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff3f3f3', endColorstr='#ffebebeb', GradientType=0);
 }
 .tabs .nav-tabs > li.active > a,
 .tabs .nav-tabs > li.active > a:active,
 .tabs .nav-tabs > li.active > a:focus,
 .tabs .nav-tabs > li.active > a:hover {
-  background-image: -webkit-linear-gradient(top, #f3f5f7 0%, #e4e9ed 100%);
-  background-image: -o-linear-gradient(top, #f3f5f7 0%, #e4e9ed 100%);
-  background-image: linear-gradient(to bottom, #f3f5f7 0%, #e4e9ed 100%);
+  background-image: -webkit-linear-gradient(top, #ffffff 0%, #f3f3f3 100%);
+  background-image: -o-linear-gradient(top, #ffffff 0%, #f3f3f3 100%);
+  background-image: linear-gradient(to bottom, #ffffff 0%, #f3f3f3 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff3f5f7', endColorstr='#ffe4e9ed', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff3f3f3', GradientType=0);
   background-color: inherit;
   border: none;
 }
