--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6312,7 +6312,7 @@ strong {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .modal .modal-dialog .modal-content {
-  background-color: #e4e9ed;
+  background-color: #f3f3f3;
 }
 .dropdown-menu {
   border: none;
@@ -6331,11 +6331,11 @@ input {
   min-height: 500px;
 }
 .page-body #breadcrumb {
-  background-image: -webkit-linear-gradient(left, #e4e9ed 0%, #c5d0d9 100%);
-  background-image: -o-linear-gradient(left, #e4e9ed 0%, #c5d0d9 100%);
-  background-image: linear-gradient(to right, #e4e9ed 0%, #c5d0d9 100%);
+  background-image: -webkit-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
+  background-image: -o-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
+  background-image: linear-gradient(to right, #f3f3f3 0%, #dadada 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffe4e9ed', endColorstr='#ffc5d0d9', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff3f3f3', endColorstr='#ffdadada', GradientType=1);
   top: 50px;
   min-height: 0;
   margin: 0;
@@ -6350,7 +6350,7 @@ input {
   text-transform: lowercase;
 }
 .page-body .page-content {
-  background-color: #e4e9ed;
+  background-color: #f3f3f3;
   min-height: 300px;
   padding-top: 10px;
 }
@@ -6358,11 +6358,11 @@ input {
   margin: -20px -15px 0;
 }
 .page-body .panel {
-  background-color: #e4e9ed;
+  background-color: #f3f3f3;
 }
 .page-body .panel .panel-heading {
   border: none;
-  background-color: #e4e9ed;
+  background-color: #f3f3f3;
 }
 .page-body .panel .panel-heading > .btn-group .btn {
   border: none;
