--- a/src/Antix.EASI.Web/client/home/home.css
+++ b/src/Antix.EASI.Web/client/home/home.css
@@ -3,6 +3,40 @@
 }
 #page-home .home .calendar-entries {
   position: fixed;
-  margin-left: 320px;
+  padding-left: 320px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  #page-home .home .calendar-entries {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  #page-home .home .calendar-entries {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) {
+  #page-home .home .calendar-entries {
+    width: 1170px;
+  }
+}
+@media (max-width: 767px) {
+  #page-home .home .calendar {
+    position: relative;
+    z-index: 1;
+    background-color: #7f9db9;
+    margin-left: -300px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  #page-home .home .calendar.active {
+    margin-left: 0;
+  }
+  #page-home .home .calendar-entries {
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 100%;
+    z-index: 0;
+  }
 }
 /*# sourceMappingURL=home.css.map */
