--- a/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.css
+++ b/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.css
@@ -1,18 +1,10 @@
-﻿.calendar {
-  /*overflow: scroll;
-    overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
-    &::-webkit-scrollbar {
-        display: none;
-    }*/
-}
-.calendar .calendar-month {
+﻿.calendar .calendar-month {
   pointer-events: none;
   position: relative;
   overflow: hidden;
-  width: 320px;
+  width: 310px;
   margin-bottom: -40px;
-  padding-right: 40px;
+  padding-right: 30px;
   padding-bottom: 4px;
 }
 .calendar .calendar-month .calendar-cell {
@@ -77,7 +69,7 @@
   position: absolute;
   z-index: 1;
   top: 13.33333333px;
-  right: -112px;
+  right: -114px;
   width: 120px;
   height: 120px;
   font-size: 13.33333333px;
