call search on calendar selection

--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -16,7 +16,10 @@
         <div class="calendar-entries">
             
             <h2 class="title">{{selectedDate | date:'mediumDate'}}</h2>
-            
+            <div class="">
+                <div examinations-list="examinations">List of Examinations</div>
+            </div>
+
             <div class="list-group">
                 <a href="#/examinations/" class="list-group-item">
                     <span class="fa fa-clipboard"></span>
