--- a/src/Antix.EASI.Web/client/home/home.css
+++ b/src/Antix.EASI.Web/client/home/home.css
@@ -3,9 +3,12 @@
 }
 #page-home .home .calendar {
   float: left;
+  position: relative;
+  z-index: 1;
 }
 #page-home .home .calendar-entries {
   position: fixed;
+  z-index: 0;
   padding-left: 320px;
   padding-right: 15px;
 }
@@ -23,6 +26,10 @@
   #page-home .home .calendar-entries {
     width: 1170px;
   }
+}
+#page-home .home .calendar-entries .examinations-list {
+  margin-left: -5px;
+  margin-right: -5px;
 }
 @media (max-width: 767px) {
   #page-home .home .calendar {
