show title for search

--- a/src/Antix.EASI.Web/client/home/home.cshtml
+++ b/src/Antix.EASI.Web/client/home/home.cshtml
@@ -30,7 +30,7 @@
                 </a>
             </div>
 
-            <h4 class="title">{{searchTitle}}</h4>
+            <h4 class="title" ng-bind-html="searchTitle"></h4>
             <div class="">
                 <div examinations-list="examinations">List of Examinations</div>
             </div>
