--- a/src/Antix.EASI.Web/client/home/home.less
+++ b/src/Antix.EASI.Web/client/home/home.less
@@ -6,6 +6,9 @@
 
     .title {
         color: #fff;
+        small{
+            color: #eee;
+        }
     }
 
     .calendar {
@@ -16,7 +19,12 @@
 
     .calendar-entries {
         position: fixed;
+        top:75px;
+        bottom:0;
+        overflow:auto;
+        -webkit-overflow-scrolling: touch;
         z-index:0;
+        padding-top:15px;
         padding-left: 320px;
         padding-right: 15px;
 
