--- a/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.less
+++ b/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.less
@@ -14,6 +14,7 @@
 
     overflow: auto;
     overflow-x: hidden;
+    -ms-overflow-style: none;
     -webkit-overflow-scrolling: touch;
     overflow: -moz-scrollbars-none;
 
