--- a/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.css
+++ b/src/Antix.EASI.Web/Scripts/antix/calendar/calendar.css
@@ -1,6 +1,7 @@
 ﻿.calendar {
   overflow: auto;
   overflow-x: hidden;
+  -ms-overflow-style: none;
   -webkit-overflow-scrolling: touch;
   overflow: -moz-scrollbars-none;
 }
