breadcrumb to blue

--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -56,7 +56,7 @@ input {
     min-height: 500px;
 
     #breadcrumb {
-        #gradient.horizontal(@page-content-color, darken(@page-content-color,10%));
+        #gradient.horizontal(@page-breadcrumb-color, darken(@page-breadcrumb-color,5%));
         top: 50px;
         min-height: 0;
         margin: 0;
