--- a/src/Antix.EASI.Web/Content/site/variables.less
+++ b/src/Antix.EASI.Web/Content/site/variables.less
@@ -1,4 +1,5 @@
 ﻿/* Vars */
-@body-color:#3E3E3E;
-@page-body-color:#7F9DB9;
-@page-content-color:#f3f3f3;
+@body-color: #3E3E3E;
+@page-body-color: #7F9DB9;
+@page-content-color: #f3f3f3;
+@page-breadcrumb-color: lighten(@page-body-color, 10%);
