--- a/src/Antix.EASI.Web/Content/site/layout.css
+++ b/src/Antix.EASI.Web/Content/site/layout.css
@@ -6329,11 +6329,11 @@ input {
   min-height: 500px;
 }
 .page-body #breadcrumb {
-  background-image: -webkit-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
-  background-image: -o-linear-gradient(left, #f3f3f3 0%, #dadada 100%);
-  background-image: linear-gradient(to right, #f3f3f3 0%, #dadada 100%);
+  background-image: -webkit-linear-gradient(left, #a0b6cb 0%, #8faac2 100%);
+  background-image: -o-linear-gradient(left, #a0b6cb 0%, #8faac2 100%);
+  background-image: linear-gradient(to right, #a0b6cb 0%, #8faac2 100%);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff3f3f3', endColorstr='#ffdadada', GradientType=1);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffa0b6cb', endColorstr='#ff8faac2', GradientType=1);
   top: 50px;
   min-height: 0;
   margin: 0;
