footer to right

--- a/src/Antix.EASI.Web/Content/site/layout.less
+++ b/src/Antix.EASI.Web/Content/site/layout.less
@@ -11,12 +11,11 @@ body {
     overflow-y: scroll;
 }
 
-strong{
-    font-weight:600;
+strong {
+    font-weight: 600;
 }
-.footer {
-    width: 100%;
-    height: 50px;
+
+.page-footer {
 }
 
 .page-nav {
