--- a/src/Antix.EASI.Web/client/app-layout.cshtml
+++ b/src/Antix.EASI.Web/client/app-layout.cshtml
@@ -84,9 +84,9 @@
 
     </div>
 
-    <footer class="footer">
+    <footer class="page-footer">
         <div class="container">
-            <div class="navbar">
+            <div class="navbar navbar-right">
                 <p class="navbar-text">&copy; antix</p>
             </div>
         </div>
